# voice_command

./: .gitignore  CLAUDE.md  CMakeLists.txt  conanfile.py
cmake/: VoiceCommandConfig.cmake.in
docs/: design.md  notes.md  remote-llm-nlu-engine.md  vulkan-notes.md
examples/: CMakeLists.txt  basic_example.cpp  command_test_example.cpp  commands.txt  common-ggml.h  input_commands.txt  integration_example.cpp  test_input.txt
examples/real_application_example/: CMakeLists.txt  Main.qml  README.md  app.cpp  app.h  conanfile.py  main.cpp
examples/real_application_example/WHISPER_CONANFILE_WITH_VULKAN/: conanfile.py
include/: asr_engine.h  audio_engine.h  local_whisper_engine.h  qt_voice_assistant.h  recognition_strategy.h  remote_whisper_engine.h  voice_assistant.h  whisper_engine.h
include/audio_capture/: audio_capture_config.h  iaudio_capture.h  ivad.h
include/audio_capture/qt/: qt_audio_capture.h
include/audio_capture/sdl/: sdl_audio_capture.h
include/audio_capture/vad/: simple_vad.h
include/command/: command_result.h  icommand.h
include/command/context/: commandcontext.h
include/command/descriptor/: commanddescriptor.h
include/command/dispatcher/: commanddispatcher.h
include/command/nlu/: inlu_engine.h  llm_nlu_engine.h  remote_llm_nlu_engine.h  rule_based_nlu_engine.h
include/command/registry/: commandregistry.h
include/testing/: command_tester.h
src/: audio_engine.cpp  guided_recognition_strategy.cpp  local_whisper_engine.cpp  nlu_recognition_strategy.cpp  qt_voice_assistant.cpp  remote_whisper_engine.cpp  voice_assistant.cpp  whisper_engine.cpp
src/audio_capture/: CMakeLists.txt  old_CMakeLists.txt
src/audio_capture/qt/: qt_audio_capture.cpp
src/audio_capture/sdl/: sdl_audio_capture.cpp
src/audio_capture/vad/: simple_vad.cpp
src/command/context/: commandcontext.cpp
src/command/descriptor/: commanddescriptor.cpp
src/command/dispatcher/: commanddispatcher.cpp
src/command/nlu/: llm_nlu_engine.cpp  remote_llm_nlu_engine.cpp  rule_based_nlu_engine.cpp
src/command/registry/: commandregistry.cpp
src/testing/: command_tester.cpp
